--- a/k8s/mysql-deployment.yaml
+++ b/k8s/mysql-deployment.yaml
@@ -25,9 +25,16 @@ spec:
           volumeMounts:
             - name: mysql-storage
               mountPath: /var/lib/mysql
+            # Removed subPath from the volumeMount to mount the entire ConfigMap
+            - name: init-sql-config
+              mountPath: /docker-entrypoint-initdb.d  # This will automatically include init.sql
       volumes:
         - name: mysql-storage
           emptyDir: {}
+        - name: init-sql-config
+          configMap:
+            name: init-sql-config  # References the ConfigMap containing init.sql
+
 ---
 apiVersion: v1
 kind: Service
@@ -40,3 +47,4 @@ spec:
       targetPort: 3306
   selector:
     app: mysql
+
